--- a/Changes
+++ b/Changes
@@ -29,6 +29,14 @@ Revision history for Perl extension Date::Gregorian.
 	- portability fix for set/get_gmtime where OS-specific gmtime(0)
 	  is something else than 00:00:00, January 1, 1970.
 
-0.08
+0.08  Fri Jan 20 13:30:40 2006
 	- added t/pod.t
 	- fixed META.yml
+
+0.09  Sat Jan 21 13:26:57 2006
+	- added iterators to Date::Gregorian and Date::Gregorian::Business
+	- fixed check_ywd for pre-gregorian dates
+	- fixed empty and very short years in businessday calculations
+	- fixed detail of holiday definition parsing and related documentation
+	- changed alignment accessor to no longer use isa
+	- added more checks in t/basic.t and t/business.t
