--- a/README
+++ b/README
@@ -7,7 +7,7 @@ All rights reserved.
 Version
 -------
 
-This is Version 0.08 of Date::Gregorian.
+This is Version 0.09 of Date::Gregorian.
 
 DSLI status
 -----------
@@ -59,8 +59,8 @@ Changes
 
 Since its first release, no major changes have been made to the
 module's basic interface.  Version 0.07 finally introduced the
-Date::Gregorian::Business extension.  For a detailed history of
-changes, see the Changes file.
+Date::Gregorian::Business extension.  Version 0.09 introduced
+iterators.  For a detailed history of changes, see the Changes file.
 
 Future enhancements
 -------------------
